# projekt_inf_2024

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  LICENSE  README.md  main  main.cpp
src/: Bullet.cpp  Bullet.h  DeathScreen.cpp  DeathScreen.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  HelpMenu.cpp  HelpMenu.h  MainMenu.cpp  MainMenu.h  PauseMenu.cpp  PauseMenu.h  Platform.cpp  Platform.h  Player.cpp  Player.h
